// Copyright (c) 2023 Sri Lakshmi Kanthan P
//
// This software is released under the MIT License.
// https://opensource.org/licenses/MIT

syntax = "proto3";

package com.srilakshmikanthanp.clipbirdroid;

enum AuthStatus {
  AUTH_OKAY = 0;
  AUTH_FAIL = 1;
}

message Authentication {
  uint32 packet_length = 1;
  uint32 packet_type = 2;
  AuthStatus status = 3;
}
